--- a/package.json
+++ b/package.json
@@ -16,24 +16,21 @@
     "format": "prettier --write src/",
     "format:check": "prettier --check src/",
     "format:all": "prettier --write \"**/*.{js,ts,vue,json,css,scss,md}\"",
-    "docker:dev": "docker-compose up",
-    "docker:dev:build": "docker-compose build",
-    "docker:dev:detach": "docker-compose up -d",
-    "docker:test": "docker-compose -f docker/test/docker-compose.yml up",
-    "docker:test:build": "docker-compose -f docker/test/docker-compose.yml build",
-    "docker:test:detach": "docker-compose -f docker/test/docker-compose.yml up -d",
-    "docker:test:bg": "./scripts/start-test-background.sh",
-    "docker:prod": "docker-compose -f docker/prod/docker-compose.yml up",
-    "docker:prod:build": "docker-compose -f docker/prod/docker-compose.yml build",
-    "docker:prod:detach": "docker-compose -f docker/prod/docker-compose.yml up -d",
-    "docker:deploy-prod": "./scripts/run-prod.sh",
+    "docker:dev:start": "chmod +x ./docker/dev/start.sh && ./docker/dev/start.sh",
+    "docker:dev:restart": "chmod +x ./docker/dev/restart.sh && ./docker/dev/restart.sh",
+    "docker:dev:stop": "chmod +x ./docker/dev/stop.sh && ./docker/dev/stop.sh",
+    "docker:test:start": "chmod +x ./docker/test/start.sh && ./docker/test/start.sh",
+    "docker:test:restart": "chmod +x ./docker/test/restart.sh && ./docker/test/restart.sh",
+    "docker:test:stop": "chmod +x ./docker/test/stop.sh && ./docker/test/stop.sh",
+    "docker:prod:start": "chmod +x ./docker/prod/start.sh && ./docker/prod/start.sh",
+    "docker:prod:restart": "chmod +x ./docker/prod/restart.sh && ./docker/prod/restart.sh",
+    "docker:prod:stop": "chmod +x ./docker/prod/stop.sh && ./docker/prod/stop.sh",
+    "docker:start:all": "chmod +x ./start-all.sh && ./start-all.sh",
+    "docker:restart:all": "chmod +x ./restart-all.sh && ./restart-all.sh", 
+    "docker:stop:all": "chmod +x ./stop-all.sh && ./stop-all.sh",
     "docker:dev:sh": "docker exec -it vue-dev bash",
     "docker:test:sh": "docker exec -it vue-test sh",
-    "docker:prod:sh": "docker exec -it vue-prod sh",
-    "docker:clean:dev": "docker-compose down -v",
-    "docker:clean:test": "docker-compose -f docker/test/docker-compose.yml down -v",
-    "docker:clean:prod": "docker-compose -f docker/prod/docker-compose.yml down -v",
-    "docker:clean:all": "npm run docker:clean:dev && npm run docker:clean:test && npm run docker:clean:prod"
+    "docker:prod:sh": "docker exec -it vue-prod sh"
   },
   "dependencies": {
     "pinia": "^3.0.1",
