start background script

--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     build:
       context: ../..
       dockerfile: docker/dev/Dockerfile
+    image: dev-app
     container_name: vue-dev
     volumes:
       - ../..:/app
