--- a/docker/prod/docker-compose.yml
+++ b/docker/prod/docker-compose.yml
@@ -3,9 +3,10 @@ services:
     build:
       context: ../..
       dockerfile: docker/prod/Dockerfile
+    image: prod-app
     container_name: vue-prod
     volumes:
-      - prod_modules:/app/node_modules
+      - prod_modules:/app/prod_modules
     ports:
       - "80:80"
     environment:
