add tailwind CSS, daisy UI

--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -11,8 +11,10 @@ RUN apt-get update && \
 # 앱 의존성 파일 복사
 COPY package*.json ./
 
-# 의존성 설치
-RUN npm install
+# 의존성 설치 (Tailwind CSS 및 DaisyUI 포함)
+RUN npm install && \
+    npm install -D tailwindcss postcss autoprefixer daisyui@latest && \
+    npx tailwindcss init -p
 
 # 개발 서버 포트 노출
 EXPOSE 5173
