--- a/package.json
+++ b/package.json
@@ -18,20 +18,25 @@
     "format:all": "prettier --write \"**/*.{js,ts,vue,json,css,scss,md}\"",
     "docker:dev:start": "chmod +x ./docker/dev/start.sh && ./docker/dev/start.sh",
     "docker:dev:restart": "chmod +x ./docker/dev/restart.sh && ./docker/dev/restart.sh",
+    "docker:dev:restart:clean": "chmod +x ./docker/dev/restart.sh && ./docker/dev/restart.sh --clean",
     "docker:dev:stop": "chmod +x ./docker/dev/stop.sh && ./docker/dev/stop.sh",
     "docker:test:start": "chmod +x ./docker/test/start.sh && ./docker/test/start.sh",
     "docker:test:restart": "chmod +x ./docker/test/restart.sh && ./docker/test/restart.sh",
+    "docker:test:restart:clean": "chmod +x ./docker/test/restart.sh && ./docker/test/restart.sh --clean",
     "docker:test:stop": "chmod +x ./docker/test/stop.sh && ./docker/test/stop.sh",
     "docker:prod:start": "chmod +x ./docker/prod/start.sh && ./docker/prod/start.sh",
     "docker:prod:restart": "chmod +x ./docker/prod/restart.sh && ./docker/prod/restart.sh",
+    "docker:prod:restart:clean": "chmod +x ./docker/prod/restart.sh && ./docker/prod/restart.sh --clean",
     "docker:prod:stop": "chmod +x ./docker/prod/stop.sh && ./docker/prod/stop.sh",
     "docker:start:all": "chmod +x ./start-all.sh && ./start-all.sh",
     "docker:restart:all": "chmod +x ./restart-all.sh && ./restart-all.sh", 
+    "docker:restart:all:clean": "chmod +x ./restart-all.sh && ./restart-all.sh --clean",
     "docker:stop:all": "chmod +x ./stop-all.sh && ./stop-all.sh",
     "docker:clean": "chmod +x ./clean.sh && ./clean.sh",
     "docker:dev:sh": "docker exec -it vue-dev bash",
     "docker:test:sh": "docker exec -it vue-test sh",
-    "docker:prod:sh": "docker exec -it vue-prod sh"
+    "docker:prod:sh": "docker exec -it vue-prod sh",
+    "setup:tailwind": "chmod +x ./setup-tailwind-daisyui.sh && ./setup-tailwind-daisyui.sh"
   },
   "dependencies": {
     "pinia": "^3.0.1",
@@ -46,12 +51,16 @@
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/test-utils": "^2.4.5",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.18",
+    "daisyui": "^4.7.3",
     "eslint": "^9.21.0",
     "eslint-plugin-vue": "~10.0.0",
     "jsdom": "^22.1.0",
     "jiti": "^2.4.2",
     "npm-run-all2": "^7.0.2",
+    "postcss": "^8.4.35",
     "prettier": "3.5.3",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.8.0",
     "vite": "^6.2.1",
     "vite-plugin-vue-devtools": "^7.7.2",
