--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "setup:tailwind": "chmod +x ./setup-tailwind-daisyui.sh && ./setup-tailwind-daisyui.sh"
   },
   "dependencies": {
+    "chart.js": "^3.9.1",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
+    "vue-chart-3": "^3.1.8",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
