--- a/docker/prod/nginx.conf
+++ b/docker/prod/nginx.conf
@@ -1,22 +1,40 @@
+# =====================================================================
+# 프로덕션 환경용 Nginx 설정 파일
+# =====================================================================
+
 server {
+    # 80 포트에서 HTTP 요청 수신 (기본 HTTP 포트)
     listen 80;
+    # 서버 이름 설정
     server_name localhost;
 
+    # 기본 루트 경로 설정
     location / {
+        # 웹 루트 디렉토리 설정 - 빌드된 Vue 애플리케이션 파일 위치
         root /usr/share/nginx/html;
+        # 기본 인덱스 파일 설정
         index index.html;
+        # SPA(Single Page Application) 라우팅 지원
+        # 모든 경로를 index.html로 리다이렉트하여 Vue Router가 처리하도록 함
         try_files $uri $uri/ /index.html;
     }
 
-    # 캐싱 설정
+    # 정적 자원(assets)에 대한 캐싱 설정
+    # js, css, 이미지 파일 등에 대한 장기 캐싱 적용으로 성능 최적화
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        # 정적 파일의 루트 디렉토리 설정
         root /usr/share/nginx/html;
+        # 1년 동안 캐시 유효 (프로덕션 환경에서 장기 캐싱)
         expires 1y;
+        # 캐시 제어 헤더 추가 - 클라이언트와 중간 캐시(프록시, CDN 등)가 파일을 캐싱
         add_header Cache-Control "public, max-age=31536000";
     }
 
+    # 오류 페이지 설정
+    # 서버 오류(500, 502, 503, 504)에 대한 커스텀 페이지 지정
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
+        # 오류 페이지 위치
         root /usr/share/nginx/html;
     }
 }
