--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,12 +1,18 @@
 {
-  "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
-  "exclude": ["src/**/__tests__/*"],
+  /**
+   * 브라우저 환경을 위한 TypeScript 설정
+   * 
+   * 이 파일은 Vue 애플리케이션의 TypeScript 설정을 정의합니다.
+   * Vue 컴포넌트 및 소스 코드에 대한 설정이 포함됩니다.
+   */
+  "extends": "@vue/tsconfig/tsconfig.dom.json", // Vue.js DOM 환경을 위한 기본 설정 확장
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"], // 타입 검사에 포함할 파일 경로 패턴
+  "exclude": ["src/**/__tests__/*"], // 타입 검사에서 제외할 파일 경로 패턴 (테스트 파일)
   "compilerOptions": {
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
+    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo", // 증분 빌드 정보 저장 위치
 
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"] // '@' 경로 별칭 설정 (src 디렉토리 지정)
     }
   }
 }
