--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,17 @@
 {
-  "files": [],
+  /**
+   * 기본 TypeScript 설정 파일
+   * 
+   * 이 파일은 다른 TypeScript 설정 파일들을 참조하는 루트 설정입니다.
+   * 브라우저 환경(app)과 Node.js 환경(node)에 대한 별도 설정을 참조합니다.
+   */
+  "files": [], // 직접적인 파일 포함 없음
   "references": [
     {
-      "path": "./tsconfig.node.json"
+      "path": "./tsconfig.node.json" // Node.js 환경 설정
     },
     {
-      "path": "./tsconfig.app.json"
+      "path": "./tsconfig.app.json" // 애플리케이션(브라우저) 환경 설정
     }
   ]
 }
