--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -1,3 +1,7 @@
+# =====================================================================
+# 개발 환경용 Docker Compose 설정 파일
+# =====================================================================
+
 services:
   app:
     build:
@@ -14,9 +18,26 @@ services:
       - .env
     environment:
       - NODE_ENV=development
+      # 데이터베이스 연결 정보 환경변수 추가 - 별도 컨테이너 연결
+      - DATABASE_URL=postgres://postgres:devpassword@vue-postgres-dev:5432/vue_dev
     command: npm run dev
+    # 외부 네트워크 사용
+    networks:
+      - vue_dev_network
+    # healthcheck 추가 - 데이터베이스 연결 확인
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://localhost:5173/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
 
 volumes:
   dev_modules:
     name: dev_modules
+    external: true
+
+networks:
+  # 외부에서 생성된 네트워크 사용
+  vue_dev_network:
     external: true
